Switching to virtual threads for better scaling and less strange yielding code, improves throughput greatly